# frama-c-rebuild

./: .gitattributes  .gitignore  .mailmap  BUILD.md  CLAUDE.md  CONTRIBUTING.md  Changelog  HIPSLEEK_USAGE.md  INSTALL.md  LICENSE  Makefile  README.md  VERSION  configurator.ml  dune  dune-project  dune-workspace  opam  reference-configuration.md  tests_configurator.ml
headers/: AORAI_LGPL  CDDL  CEA_FSF_LGPL  CEA_INRIA_LGPL  CEA_LGPL  CEA_PR_LGPL  CIL  INRIA_BSD  JCF_LGPL  MODIFIED_CAMOMILE  MODIFIED_DLMALLOC  MODIFIED_MENHIR  MODIFIED_OCAMLGRAPH  MODIFIED_SPARETIMELABS  MODIFIED_WHY3  OCAML_STDLIB  UNMODIFIED_WHY3  dune  headache_config.txt
man/: dune  frama-c.1  frama-c.1.md
ppx/: dune  ppx_z_literals.ml
share/analysis-scripts/: analysis.mk  bench-sqlite.sh  benchmark_database.py  build.py  build_callgraph.py  clone.sh  cmd-dep.sh  concat-csv.sh  creduce.sh  detect_recursion.py  dune  epilogue.mk  estimate_difficulty.py  external_tool.py  fc-estimate-difficulty.mk  fced-win.Dockerfile  fclog.py  find_fun.py  flamegraph.pl  frama_c_results.py  function_finder.py  git_utils.py  heuristic_list_functions.py  list_files.py  list_functions.ml  make_wrapper.py  normalize_jcdb.py  parse-coverage.sh  plot.sh  print_callgraph.py  prologue.mk  results_display.py  script_for_creduce_fatal.sh  script_for_creduce_non_fatal.sh  source_filter.py  summary.py  template.mk
src/: dune
src/init/: dune  frama_c_init.ml  frama_c_init.mli
src/init/boot/: boot.ml  boot.mli  dune
src/init/toplevel/: toplevel_config.ml
src/kernel_internals/parsing/: clexer.mli  clexer.mll  cparser.mly  dune  errorloc.ml  errorloc.mli  lexerhack.ml  lexerhack.mli  logic_lexer.mli  logic_lexer.mll  logic_parser.mly  logic_preprocess.mli  parse_env.ml  (+2 more)
src/libraries/: fclib.ml
src/plugins/: .gitattributes
tests/: dune  ptests_config  test_config
tests/cil/: Change_formals.ml  enum_merge1.i  enum_merge2.i  enum_merge3.i  issues.c  mkBinOp.ml
tests/constant_propagation/: array_pointers.i  bts-1787-bis.i  const_globals.c  declaration.c  literal_strings.c
tests/crowbar/: README.md  dune  dune-project
tests/fc_script/: dune
tests/impact/: topbot.c
tests/jcdb/: dune  jbdb.c  jbdb2.c  jcdb.c  jcdb.ml  logic-pp-include.c  subdir.c  test_config
tests/libc/: alloca_h.c  check_assigns.ml  check_const.ml  check_full_libc.sh  check_header_guards.sh  check_parsing_individual_headers.ml  compile_and_run.sh  ctype.c  dlfcn_h.c  dune  endian_h.c  err_h.c  errno_h.c  fc_libc.c  fpclassify.c  gcc_builtins.c  inttypes_h2.c  limits_h.c  math_h.c  mixed_headers.c  regex_h.c  resolv_h.c  runtime.c  runtime.sh  sched_h.c  search_h.c  signal_c_h.c  socket.c  stdio_c.c  stdlib_c.c  stdlib_h.c  strings_h.c  sys_time_h.c  time_misc.c  unistd_c.c  unistd_h.c  vscanf.c  vwscanf.c  wctype_h.c  wordexp_h.c
tests/lti_system/: circle.expected  circle.ml  dune  random_3D.expected  random_3D.ml  simple.expected  simple.ml
tests/metrics/: dune  libc.c  used-files2.h  used-files2.i
tests/misc/: Debug_category.ml  audit.c  autocomplete.i  bts0452.i  bts0489.ml  bts1135_ulevel.i  bts1201.i  bug0277.i  cil_builder_test.i  cil_builder_test.ml  cli_string_multiple_map.ml  coherent_compare_hash_types.expected  coherent_compare_hash_types.ml  copy_kf.ml  cpp_extra_args_per_file.ml  cpp_extra_args_per_file1.c  cpp_extra_args_per_file3.c  debug_category.i  decimal_parameter.ml  deferred-errors.c  dune  exception.ml  filepath.i  find_enclosing_loop.ml  global_decl_loc.ml  help-messages.i  interpreted_automata_dataflow_backward.ml  interpreted_automata_dataflow_forward.ml  issue_191.ml  keep_entry_point.i  log_twice.ml  my_visitor.ml  obfuscate.c  pp_bin_hex.ml  pp_int.ml  pragma-pack-macos-arm-gcc.t  pragma_ignore.c  print_machdep.i  remove_attrs_deep.expected  remove_attrs_deep.ml  (+15 more)
tests/mopsa/: dune
tests/pdg/: README  dyn_dpds.ml  sets.ml  test_config
tests/pretty_printing/: test_config
tests/saveload/: callbacks.i  load_one.ml  multi_project.ml  sparecode.i  status.ml
tests/scope/: bts971.ml
tests/slicing/: README  bts0190.i  bts827.i  combine.ml  csmith.i  dune  filter_switch.i  libAnim.ml  libSelect.ml  loops.i  simple_intra_slice.ml  sizeof.i  test_config  unravel-point.i  unravel-variance.i  variadic.c
tests/sparecode/: acsl_extension.i  params.i
tests/spec/: Extend.i  Extend.ml  Extend_preprocess.i  Extend_recursive_preprocess.i  Extend_recursive_preprocess.ml  Type_of_term.ml  acsl_by_example.c  add_global.ml  array_conversion.c  array_length.i  assign_in_spec.c  assignable_location.i  assigns_void.c  at.c  axiom_ignored_bts1116.i  axiomatic_same_name.c  boolean_conversion.ml  bsearch.c  bts0655.ml  bts1068.i  comparison.ml  const.c  const_fold_term.ml  const_ptr_bts1729.i  conversion.c  default_spec_mode.i  default_spec_mode.ml  doxygen.c  dune  extend_extern.i  extend_extern.ml  fct_ptr_named_arg.i  float-acsl.i  inductive_horn_clauses.i  init-in-glob-annot.i  location_char.ml  logic_def.c  logic_labels_wrong.c  max.c  model.ml  (+13 more)
tests/syntax/: Enum_repr.ml  Refresh_visitor.ml  alignas_typing_constrains.c  alignas_typing_constrains.ml  alignas_typing_constrains_companion.c  aligned.i  alignof_typing_constrains.c  array_formals.c  asm_with_contracts.i  ast_diff_1.ml  attributes-exotic.i  autoreference-init-issue-563.c  binary_op.c  built.i  builtin_macro.c  c11-keywords.c  c23-align-kw.c  c23-bool-kws.c  compiler_builtins.c  copy_visitor_bts_1073.c  copy_visitor_bts_1073.ml  copy_visitor_bts_1073_bis.ml  dangerous_expressions.i  define_string_logic_pp_bts2101.c  dune  empty_struct.i  enum_typing_issue_1682.i  errorloc-inclusion-b.h  errorloc-inclusion-c.h  errorloc-inclusion.c  errorloc-macros.c  errorloc-omitted-range.i  errorloc-spaces.c  fct_ptr.i  field-offsets.c  float_parser_ddos.c  floats_c23.c  force_posix.c  func_locs.ml  function-types-compatible.i  (+46 more)
tools/: dune
tools/hdrck/: Makefile  dune  dune-project  frama-c-hdrck.opam  hdrck.ml
tools/lint/: Makefile  UTF8.ml  UTF8.mli  dune  dune-project  frama-c-lint.opam  lint.ml
tools/ptests/: Makefile  dune  dune-project  ptests.ml  wtests.ml
(+6446 files in other folders)
