; Test dependencies
(rule
 (alias frama-c-configure)
 (deps
  (universe)
  (alias ../frama-c-configure-tests))
 (action (progn
            (echo "  - tests/jcdb/:" %{read:../../tests-jcdb-deps-available} "\n")
            (echo "    - python-3.10:" %{read:../../python-3.10-available} "\n")
            ; If you add some dependencies here, do not forget to add them to
            ; tests_configurator.ml
  ))
)

(subdir
 result/subdir1
 (copy_files ../../subdir1/*))

(subdir
 result/subdir2
 (copy_files ../../subdir2/*))

(subdir
 result/logic-pp-include
 (copy_files ../../logic-pp-include/*))
