; Test dependencies
(rule
 (alias frama-c-configure)
 (deps
  (universe)
  (alias ../frama-c-configure-tests))
 (action (progn
            (echo "  - tests/metrics/:" %{read:../../tests-metrics-deps-available} "\n")
            (echo "    - python-3.10:" %{read:../../python-3.10-available} "\n")
            ; If you add some dependencies here, do not forget to add them to
            ; tests_configurator.ml
  ))
)

