;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  SPDX-License-Identifier LGPL-2.1                                      ;;
;;  Copyright (C)                                                         ;;
;;  CEA (Commissariat à l'énergie atomique et aux énergies alternatives)  ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(executable
 (public_name frama-c-ptests)
 (name ptests)
 (modules ptests)
 (libraries unix str)
 (preprocess (pps ppx_deriving_yojson))
)

(executable
 (public_name frama-c-wtests)
 (name wtests)
 (modules wtests)
 (libraries unix str)
 (preprocess (pps ppx_deriving_yojson))
)
