;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                        ;;
;;  SPDX-License-Identifier LGPL-2.1                                      ;;
;;  Copyright (C)                                                         ;;
;;  CEA (Commissariat à l'énergie atomique et aux énergies alternatives)  ;;
;;                                                                        ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(rule
 (alias frama-c-configure)
 (deps (universe))
 (action ( progn
           (echo "ACSL importer:" %{lib-available:frama-c-acsl-importer.core} "\n")
           (echo " - Frama-C:" %{lib-available:frama-c.kernel} "\n"))))

(rule
 (alias install)
 (enabled_if
  (and
   (= %{env:FRAMAC_DEVELOPER=no} "yes")
   (not %{lib-available:frama-c-acsl-importer.core})))
 (action (echo "WARNING: ACSL-importer disabled. Run 'dune build @frama-c-configure' for more details\n"))
)

(library
 (optional)
 (name acsl_importer)
 (public_name frama-c-acsl-importer.core)
 (flags -open Frama_c_kernel :standard -w -9)
 (libraries frama-c.kernel)
 (instrumentation (backend landmarks))
 (instrumentation (backend bisect_ppx)))

(plugin
 (optional)
 (name acsl-importer) (libraries frama-c-acsl-importer.core) (site (frama-c plugins)))
