(lang dune 3.13)
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;
;;                                                                            ;;
;;  SPDX-License-Identifier LGPL-2.1                                          ;;
;;  Copyright (C)                                                             ;;
;;  CEA (Commissariat à l'énergie atomique et aux énergies alternatives)      ;;
;;  INRIA (Institut National de Recherche en Informatique et en Automatique)  ;;
;;  INSA (Institut National des Sciences Appliquees)                          ;;
;;                                                                            ;;
;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;;

(name frama-c-aorai)
(using dune_site 0.1)
(using menhir 2.1)
